--- a/src/html/partials/base/header.hbs
+++ b/src/html/partials/base/header.hbs
@@ -1,8 +1,8 @@
 <a href='#content' class='skip-to-main'>Skip to main content</a>
 
 <header class='{{#ifEquals this 'sticky'}}is-sticky{{/ifEquals}}{{#ifEquals this 'sticky-dark'}}is-sticky is-dark{{/ifEquals}}'>
-	<a href='https://pudding.cool' target='_blank' class='logo'>
-		@@include('wordmark.svg')
+	<a href='https://drexel-uhc.github.io/analytics-corner/' target='_blank' class='logo'>
+		<p style="font-family: Arial, sans-serif; font-size:large;">UHC Graphics</p>
 	</a>
 	 {{#ifEquals this 'sticky'}} {{> base/sticky }} {{/ifEquals}}
 	 {{#ifEquals this 'sticky-dark'}} {{> base/sticky }} {{/ifEquals}}
