comment out original intro

--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -26,10 +26,10 @@
 	{{> base/header }}
 
 	<main id='content'>
-		<div class="test-intro">
+		{{!-- <div class="test-intro">
 			{{> story/test-opener}}
 			{{> story/hungary-blank }}	
-		</div>
+		</div> --}}
 
 		{{> story/intro }}
 
