commented out non-map sections

--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -35,12 +35,12 @@
 
 
 		{{> story/scrollyside }}
-
+{{!-- 
 		{{> story/hungary }}
 		{{> story/lithuania }}
 		{{> story/poland }}
 
-		{{> story/splitregions }}
+		{{> story/splitregions }} --}}
 		{{> story/conclusion }}
 		{{> story/methods }}
 
