final polishing of POC for PDPH

--- a/src/html/partials/story/scrollyside.hbs
+++ b/src/html/partials/story/scrollyside.hbs
@@ -30,12 +30,12 @@
         <!--div class='step'>
           <p>{{doc.p3}}</p>
         </div-->
-        <div class='step'>
+        {{!-- <div class='step'>
           <p>{{{doc.p4}}}</p>
-        </div>
-        <div class='step'>
+        </div> --}}
+        {{!-- <div class='step'>
           <p>{{{doc.p5}}}</p>
-        </div>
+        </div> --}}
         <!--div class='step'>
           <p>{{{doc.p6}}}</p>
         </div>
@@ -51,7 +51,7 @@
         <div class='step'>
           {{{doc.p10}}}
         </div>
-        <div class='step'>
+        {{!-- <div class='step'>
           <p>{{doc.p11}}</p>
         </div>
         <div class='step'>
@@ -65,7 +65,7 @@
         </div>
         <div class='step'>
           <p>{{doc.p15}}</p>
-        </div>
+        </div> --}}
 	  </article>
     
   </div>
